app/assets/stylesheets/categories.css
/*-----------------entire file--------------------------*/
* {
	font-family: 'Open Sans', sans-serif;
	color: #494F60
}

body {
	background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
}

/*----------------head container---------------------*/
#container{
	width: 90%;
	margin: auto;
	padding: 4px 40px 4px 40px;
	text-align: center;
}

/*--------------------top navigation bar-----------------*/

.navbar-item {
	height: 40px;
	border: 3px solid #494F60;
	border-radius: 10px;
	margin: 0 2px 0 2px;
}

.navbar {
	display: flex;
}

.navbar-keyboard {
	margin-top: -10px;
	margin-right: -80px;
	color: rgba(0, 0, 0, 0);
	width: 200px;
}

.navbar-controls-text {
	text-align: right;
	margin-top: -35px;
	margin-right: 10px;
}

.navbar-home-button button{
	text-align: center;
	font-size: 25px;
	width: 100px;
	margin-top: 15%;
}

li {
	font-size: 20px;
}


/*----------------------grid system-----------------*/
/*back button on keywords page*/
.back-btn {
	border: 2px solid #494F60;
	border-radius: 10px;
	text-align: center;
	text-decoration: none;
	font-family: 'Gloria Hallelujah', cursive;
	font-size: 20px;
	background-color: rgba(255,255,255, 0.25);
	margin: 0.7%;
	padding: 0.7%;
}

.back-btn:hover {
	background-color: #FFDC9C;
}

a.back-btn-link:hover {
	text-decoration: none;
}


/*each individual tile*/
.words-col {
	border: 2px solid #494F60;
	min-height: 120px;
	border-radius: 10px;
	text-align: center;
	font-size: 20px;
	background-color: rgba(255,255,255, 0.25);
	margin: 0.7%;
}

.words-col img {
	height: 70px;
	max-width: 100px;
}

/*a row of tiles*/
.words-row {
	display: flex;
}

.navbar-keyboard img {
	margin: 5% ;
	height: 100px;
}

.categories-col {
	border-style: solid;
	transition: background-color 0.6s ease;
	box-shadow: 0 .5em 1em rgba(0,0,0,.3);
	word-wrap: break-word;
}

.categories-col:hover {
	background-color: #FFDC9C;
}

.keywords-col {
	transition: background-color 0.5s ease;
	box-shadow: 0 .5em 1em rgba(0,0,0,.3);
	word-wrap: break-word;
}

.keywords-col:hover {
	background-color: #FFDC9C;
}


/*Most Recent Rows*/
.most-row:nth-of-type(1) .most-col-word {
	border: 2px solid #3A779E;
}

.most-row:nth-of-type(2) .most-col-word {
	border: 2px solid #3A779E;
}

/*---------------------keyboard page------------------*/
.keyboard-grid {
	font-size: 25px;
}

/*----------------sentence-bar -------------------------*/
#sound{
	display: none;
}

.sentence {
	display: flex;
}

.sentence-bar {
	border: 3px solid #494F60;
	background-color: rgba(255,255,255, 0.7);
	min-height: 95px;
	border-radius: 10px;
	margin: .5%;
	padding: 0 0 15px 34px;
}

.speak {
	margin-left: -30px;
	margin-right: 40px;
}

.speak img {
	height: 100px;
}

/*sentence columns*/
.sentence-col {
	min-width: 100px;
	margin: 12px 5px 0 0;
	word-wrap: break-word;
}

	.col-md-1.sentence-col {
			min-width: 170px;
			box-shadow: 0 .5em 1em rgba(0,0,0,.3);

	}

/*images in the sentence bar*/
.sentence-col img {
	max-height: 60px;
	max-width: 70px;
	margin: -5px 0 0 0px;
}

.most-click img {
	margin: 5px 0 0 0;
}


.most-col {
	border-style: solid;
	transition: background-color 0.6s ease;
	box-shadow: 0 .5em 1em rgba(0,0,0,.3);
}

.most-col:hover {
	background-color: #FFDC9C;
}

